[package]
name = "mruby3-sys"
version = "3.2.0"
edition = "2021"
description = "Rust bindings for mruby 3.x Ruby language implementation"
license = "MIT"
repository = "https://github.com/jarkonik/mruby3-sys"
readme = "README.md"
keywords = ["ruby", "mruby", "ffi", "bindings"]
categories = ["external-ffi-bindings", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"
